<resources>
    <string name="app_name">My Application</string>
    <string name="connectsocket">连接websocket</string>
    <string name="unconnectsocket">断开连接websocket</string>
    <string name="send">发送消息</string>
    <string name="publish">发布</string>
    <string name="subscribe">订阅</string>
    <string name="decoder">转码</string>
    <string name="accept">接收</string>
    <string name="bindService">绑定服务</string>
</resources>
